--- a/css/backstage.css
+++ b/css/backstage.css
@@ -25,15 +25,15 @@
     text-align: center;
 }
 
+/* backstage css */
 .backstage{
-    width: 960px;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
     margin: 0 auto;
-/*    position: relative;*/
-/*    top: 60px;*/
+/*    background-color: blue;*/
 }
 .backstage > div{
     width: 100%;
@@ -41,7 +41,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin: 16px 8px;
+    margin: 16px 0px;
 }
 
 .backstage > div > p{
@@ -78,7 +78,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    width: 800px;
+    width: 80%;
     margin: 8px;
 }
 
@@ -177,11 +177,11 @@
     
 }
 .backstage .house_surrounding_container .house_surrounding{
-    font-size: 24px;
-    padding: 10px;
+    font-size: 16px;
+    padding: 8px;
     line-height: 28px;
     letter-spacing: 3px;
-    width: 800px;
+    width: 70%;
     height: 300px;
     margin: 12px;
 }
@@ -192,11 +192,11 @@
 }
 
 .backstage .house_detail_container .house_detail{
-    font-size: 24px;
-    padding: 10px;
+    font-size: 16px;
+    padding: 8px;
     line-height: 28px;
     letter-spacing: 3px;
-    width: 800px;
+    width: 70%;
     height: 300px;
     margin: 12px;
 }
@@ -208,6 +208,7 @@
     flex-wrap: wrap;
     justify-content: flex-end;
     align-items: center;
+    width: 90%;
 }
 
 .backstage .house_submit_container .house_submit{
@@ -223,3 +224,38 @@
     margin-right: 72px;
 }
 
+
+@media(max-width: 991px){
+    .backstage > div > p{
+        margin: 4px;
+        width: 60px;
+        font-size: 14px;
+    }
+    
+    .backstage > div > input{
+        width: 120px;
+        height: 20px;
+        padding: 4px;
+        font-size: 12px;
+    }
+    
+    .backstage  div > label{
+        font-size:  14px !important;
+    }
+    
+    .backstage div div > p{
+        font-size: 14px;
+    }
+    
+    .backstage .house_submit_container{
+        width: 100%;
+        margin-top: 0px;
+    }
+
+    .backstage .house_submit_container .house_submit{
+        font-size: 18px;
+        width: 36px;
+        padding: 8px 12px;
+        margin-right: 16%;
+    }
+}
