--- a/css/member.css
+++ b/css/member.css
@@ -26,7 +26,6 @@
 }
 
 .member{
-    width: 960px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -56,12 +55,12 @@
     border-radius: 6px;
     text-align: center;
     cursor: pointer;
+    font-size: 15px;
 }
 
 .member .member_display{
     width: 600px;
     height: 100%;
-    
 }
 
 /* member data css */
@@ -170,4 +169,44 @@
     font-size: 8px;
     margin: 8px;
 }
+
+@media(max-width: 991px){
+    .member{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    
+    .member .member_bar{
+        width: 464px;
+        height: 90px;
+        flex-direction: row;
+        margin-top: 32px;
+        padding-top: 32px;
+        border-top: solid 1px rgba(230, 230, 230, 0.7);
+    }
+    
+    .member .member_bar .member_bar_btn{
+        margin: 8px;
+    }
+}
+
+@media(max-width: 767px){
+    .member .member_bar{
+        width: 320px;
+        height: 200px;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    
+    .member .member_bar .member_bar_btn{
+        margin: 8px;
+    }
+    
+    .member .member_display{
+        width: 320px;
+    }
+}
+
+
     
