--- a/css/member.css
+++ b/css/member.css
@@ -99,6 +99,18 @@
     letter-spacing: 1px;
 }
 
+.member_input_id{
+    background-color: rgba(230, 230, 230, 0);
+    color: rgb(128, 128, 128);
+    font-size: 16px;
+    border: 0px solid rgba(230, 230, 230, 0.7);
+    width: 320px;
+    text-align: left;
+    border-radius: 5px;
+    height: 30px;
+    padding-left: 5px;
+}
+
 .member .member_display .member_data .member_modify_btn{
     font-size: 16px;
     color: white;
@@ -116,7 +128,7 @@
 /* member fav house css */
 .member .member_display .member_fav_house{
     width: 100%;
-    display: flex;
+    display: none;
     flex-direction: row;
     align-items: center;
     justify-content: center;
