--- a/css/member.css
+++ b/css/member.css
@@ -308,6 +308,15 @@
     cursor: pointer;
 }
 
+.alert_box .alert_btn_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    margin: 0 auto;
+}
+
 @media(max-width: 991px){
     .member{
         flex-direction: column-reverse;
